--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,16 +4,16 @@ set -g prefix C-a
 bind C-a send-prefix
 
 #Split Panes Using | and -
-bind | split-window -h
-bind - split-window -v
+bind l split-window -h
+bind k split-window -v
 unbind '"'
 unbind %
 
 #Switch panes with using alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -26,4 +26,5 @@ set -g visual-activity on
 bind -n S-Pageup copy-mode -u
 bind -n S-Pagedown copy-mode -u
 
-
+#Unbind Esc for better vim usage
+set -sg escape-time 0
