--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ bind C-a send-prefix
 
 #Split Panes Using | and -
 bind l split-window -h
-bind k split-window -v
+bind j split-window -v
 unbind '"'
 unbind %
 
@@ -28,3 +28,13 @@ bind -n S-Pagedown copy-mode -u
 
 #Unbind Esc for better vim usage
 set -sg escape-time 0
+
+## Use vim keybindings in copy mode
+setw -g mode-keys vi
+set-option -s set-clipboard off
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+# y or highlight with mouse to copy
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
