--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = Anthiwat Chaksangchaichot
+	name = Thapanin Chaksangchaichot
 	email = 74717437+AntCChaichot@users.noreply.github.com
 [color]
 	ui = auto
