fix before changing laptop

--- a/touchegg.conf
+++ b/touchegg.conf
@@ -53,16 +53,20 @@
     </gesture>
 
     <gesture type="SWIPE" fingers="3" direction="LEFT">
-      <action type="TILE_WINDOW">
-        <direction>left</direction>
-        <animate>true</animate>
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>Shift_L+Tab</keys>
+        <decreaseKeys>Tab</decreaseKeys>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="3" direction="RIGHT">
-      <action type="TILE_WINDOW">
-        <direction>right</direction>
-        <animate>true</animate>
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
       </action>
     </gesture>
 
@@ -91,7 +95,7 @@
     </gesture>
 
     <!--
-    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+    <gesture type="SWIPE" fingers="4" direction="DOWN">
       <action type="SEND_KEYS">
         <repeat>false</repeat>
         <modifiers>Super_L</modifiers>
@@ -107,7 +111,6 @@
       </action>
     </gesture>
 
-    <!--
     <gesture type="PINCH" fingers="4" direction="IN">
       <action type="SEND_KEYS">
         <repeat>false</repeat>
@@ -117,6 +120,7 @@
       </action>
     </gesture>
 
+    <!--
     <gesture type="TAP" fingers="2">
       <action type="MOUSE_CLICK">
         <button>3</button>
