New laptop configs

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
+# Apply theme
+include ./theme.conf
 
 #: Fonts {{{
 
@@ -712,6 +714,7 @@ enabled_layouts splits:split_axis=horizontal
 #: bottom and left.
 
 # window_padding_width 0
+window_padding_width 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -747,6 +750,7 @@ enabled_layouts splits:split_axis=horizontal
 #: between zero and one, with zero being fully faded).
 
 # hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -754,7 +758,7 @@ enabled_layouts splits:split_axis=horizontal
 #: window manager/operating system. Note that the effects of changing
 #: this setting when reloading config are undefined.
 
-window_logo_path /home/thapanin/Pictures/thangngern-resized.png
+window_logo_path /home/tchaksangchaichot/Pictures/cat.png
 
 #: Path to a logo image. Must be in PNG format. Relative paths are
 #: interpreted relative to the kitty config directory.  The logo is
@@ -1291,7 +1295,7 @@ background_opacity 1.0
 
 #: OS specific tweaks {{{
 
-wayland_titlebar_color #E6128A
+wayland_titlebar_color #1d1f21
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
@@ -1375,6 +1379,7 @@ wayland_titlebar_color #E6128A
 #: by reloading the config is not supported.
 
 # linux_display_server auto
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
