set touchegg gesture, vim to switch copy-paste between x11 and wayland automatically, kitty opacity

--- a/touchegg.conf
+++ b/touchegg.conf
@@ -78,6 +78,23 @@
       </action>
     </gesture>
 
+    <gesture type="SWIPE" fingers="4" direction="UP">
+    <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Super_L</modifiers>
+        <keys>A</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    
+    <gesture type="SWIPE" fingers="4" direction="DOWN">
+    <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <keys>Super_L</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+
     <gesture type="SWIPE" fingers="4" direction="RIGHT">
       <action type="CHANGE_DESKTOP">
         <direction>auto</direction>
@@ -94,17 +111,8 @@
       </action>
     </gesture>
 
+    
     <!--
-    <gesture type="SWIPE" fingers="4" direction="DOWN">
-      <action type="SEND_KEYS">
-        <repeat>false</repeat>
-        <modifiers>Super_L</modifiers>
-        <keys>S</keys>
-        <on>begin</on>
-      </action>
-    </gesture>
-    -->
-
     <gesture type="PINCH" fingers="4" direction="OUT">
       <action type="SHOW_DESKTOP">
         <animate>true</animate>
@@ -119,6 +127,7 @@
         <on>begin</on>
       </action>
     </gesture>
+    -->
 
     <!--
     <gesture type="TAP" fingers="2">
