--- a/kitty.conf
+++ b/kitty.conf
@@ -749,8 +749,7 @@ window_padding_width 5
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
-hide_window_decorations yes
+hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -1116,6 +1115,7 @@ background_opacity 0.95
 #: Advanced {{{
 
 # shell .
+shell fish
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
